Fix rubocop LineLength # see https://rubocop.readthedocs.io/en/latest/cops_layout/#layoutlinelength

--- a/.sync.yml
+++ b/.sync.yml
@@ -6,7 +6,7 @@
       Enabled: false
     Metrics/BlockNesting:
       Enabled: false
-    Metrics/LineLength:
+    Layout/LineLength:
       Enabled: false
     Style/AccessorMethodName:
       Enabled: false
