(MODULES-11197) Run pdk update to add release workflow

--- a/.sync.yml
+++ b/.sync.yml
@@ -50,6 +50,8 @@ appveyor.yml:
   delete: true
 .github/workflows/auto_release.yml:
   unmanaged: false
+.github/workflows/release.yml:
+  unmanaged: false
 .gitlab-ci.yml:
   delete: true
 
