--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,7 @@ AllCops:
 Layout/LineLength:
   Description: People have wide screens, use them.
   Max: 200
+  Enabled: false
 RSpec/BeforeAfterAll:
   Description: Beware of using after(:all) as it may cause state to leak between tests.
     A necessary evil in acceptance testing.
@@ -73,21 +74,19 @@ Style/SymbolArray:
   EnforcedStyle: brackets
 Style/SignalException:
   Enabled: false
-Layout/HeredocIndentation:
-  Enabled: false
-Metrics/BlockNesting:
-  Enabled: false
-Metrics/LineLength:
-  Enabled: false
-Style/AccessorMethodName:
-  Enabled: false
 Style/DoubleNegation:
   Enabled: false
 Style/MultipleComparison:
   Enabled: false
 Style/NumericPredicate:
   Enabled: false
-Style/PredicateName:
+Layout/HeredocIndentation:
+  Enabled: false
+Metrics/BlockNesting:
+  Enabled: false
+Naming/AccessorMethodName:
+  Enabled: false
+Naming/PredicateName:
   Enabled: false
 RSpec/VariableName:
   Enabled: false
@@ -160,8 +159,6 @@ Layout/EndOfLine:
 Layout/FirstArgumentIndentation:
   Enabled: false
 Layout/HashAlignment:
-  Enabled: false
-Layout/HeredocIndentation:
   Enabled: false
 Layout/LeadingEmptyLines:
   Enabled: false
@@ -274,8 +271,6 @@ Metrics/ParameterLists:
 Metrics/PerceivedComplexity:
   Enabled: false
 Migration/DepartmentName:
-  Enabled: false
-Naming/AccessorMethodName:
   Enabled: false
 Naming/BlockParameterName:
   Enabled: false
