(maint) Pin async gem
Async 2.0.0 requires a Ruby 3 bump, so pinning to 1.x

--- a/.sync.yml
+++ b/.sync.yml
@@ -40,6 +40,8 @@ Gemfile:
         from_env: BEAKER_PUPPET_VERSION
         version: '~> 1.22'
       - gem: github_changelog_generator
+      - gem: async
+        version: '~> 1'
       - gem: beaker-module_install_helper
       - gem: beaker-puppet_install_helper
       - gem: nokogiri
