--- a/.sync.yml
+++ b/.sync.yml
@@ -49,9 +49,13 @@ appveyor.yml:
   delete: true
 .travis.yml:
   delete: true
-.github/workflows/auto_release.yml:
-  unmanaged: false
 .github/workflows/release.yml:
+  unmanaged: false
+.github/workflows/release_prep.yml:
   unmanaged: false
 .gitlab-ci.yml:
   delete: true
+# We still use the Vox acceptance Rake task instead of Litmus
+Rakefile:
+  requires:
+    - voxpupuli/acceptance/rake
