--- a/.sync.yml
+++ b/.sync.yml
@@ -34,15 +34,16 @@ Gemfile:
         version: '~> 2'
       - gem: beaker-rspec
         from_env: BEAKER_RSPEC_VERSION
-      # Prevent beaker-puppet from being installed on Ruby > 3.1 until beaker-puppet supports newer Rubies
       - gem: beaker-puppet
         from_env: BEAKER_PUPPET_VERSION
         version: '~> 4.0'
-        condition: Gem::Requirement.create('< 3.2.0').satisfied_by?(Gem::Version.new(RUBY_VERSION.dup))
-      - gem: async
-        version: '~> 1'
       - gem: beaker-module_install_helper
       - gem: nokogiri
+      # Conflicting Faraday requirements cause unexpected dependency resolution
+      # Pin orchestrator_client until all dependencies support Faraday >= 2
+      # See: P4DEVOPS-8804
+      - gem: 'orchestrator_client'
+        version: '< 0.7.1'
     ":system_tests":
       - gem: voxpupuli-acceptance
 
